@@ -700,3 +700,5 @@ version 1.1.9: (2017-11-23) - WIP
 - `deltaUpdateNoSpikes` + `deltaUpdateRegNoSpikes` removed as no longer required
 - Simplification of terms in `deltaUpdateReg`
 - Small changes to unify code format in C++ file
+- Notation change: `phi` replaced by `s` in no-spikes implementation
+- Unit test changed accordingly (no-spike)
